# rascii

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  test.sh
include/: app.hpp  control.hpp  display.hpp  ecs.hpp  matrix.hpp  mesh.hpp  quaternion.hpp  raster.hpp  render.hpp  runtime_input.hpp  scene_graph.hpp  tex.hpp  vec.hpp
src/: CMakeLists.txt  app.cpp  main.cpp  runtime_input.cpp
test/: CMakeLists.txt  main_test.cpp
